test/files/pos/t2433/Test.scala
object Test {
  (new A223).foo()
}
