test/files/neg/macro-incompatible-macro-engine-a/Test_3.scala
object Test extends App {
  Macros.foo
  Macros.foo
}